# TangeSillySim

./: CMakeLists.txt
.github/workflows/: pages.yml  pipeline.yml
item_optimizer/include/: Item_optimizer.hpp
simulator/include/: Combat_simulator.hpp  hit_result.hpp
